# fastapi-bookstore

./: README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  models.py  store.py
backend/app/routers/: authors.py  books.py
